--- a/notebooks/GrafoHSConversions.ipynb
+++ b/notebooks/GrafoHSConversions.ipynb
@@ -1,6 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d89077e9-add9-40c5-84fc-701287281e57",
+   "metadata": {},
+   "source": [
+    "### (Execute if your running in Binder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b64ae3cf-a18b-4142-a3d6-190fb46dbe6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment these lines\n",
+    "\n",
+    "# !pip install pandas\n",
+    "# !pip install openpyxl\n",
+    "# !pip install networkx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90fab08c-04ae-4b25-b88d-5c291faa740f",
+   "metadata": {},
+   "source": [
+    "# HS Conversion Tables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "256d55eb-f944-4bff-931f-28ee2f4fb723",
