--- a/notebooks/Exploring HS Correlation Tables.ipynb
+++ b/notebooks/Exploring HS Correlation Tables.ipynb
@@ -25,7 +25,9 @@
   {
    "cell_type": "markdown",
    "id": "5c86a657-3557-4b4e-95e3-c97f6f2700b4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Exploring HS Correlation Tables"
    ]
