--- a/notebooks/GrafoHSConversions.ipynb
+++ b/notebooks/GrafoHSConversions.ipynb
@@ -49,88 +49,7 @@
     "import os\n",
     "from pathlib import Path\n",
     "import platform\n",
-    "import networkx as nx\n",
-    "\n",
-    "#Directorio\n",
-    "directory = \"HSConversionTables\"\n",
-    "if platform.system()=='Windows':\n",
-    "    Path(r'C:/Users/Usuario/Desktop/CEP/'+directory).mkdir(parents=True, exist_ok=True)\n",
-    "    os.chdir(r'C:/Users/Usuario/Desktop/CEP/'+directory)\n",
-    "else: \n",
-    "    Path('/home/nachengue/Escritorio/CEP/'+directory).mkdir(parents=True, exist_ok=True)\n",
-    "    os.chdir('/home/nachengue/Escritorio/CEP/'+directory)\n",
-    "print(os.getcwd())\n",
-    "\n",
-    "# data = pd.read_excel(\"./data/CompleteCorrelationsOfHS-SITC-BEC_20170606.xlsx\")\n",
-    "# cols = ['HS92','HS96','HS02','HS07','HS12','HS17']\n",
-    "# data = data[cols].dropna().drop_duplicates()\n",
-    "# for col in cols: \n",
-    "#     data[col] = data[col].apply(lambda x: col+\"-\"+str(int(x)).zfill(6))\n",
-    "# connections = []\n",
-    "# for i in range(len(cols)-1): \n",
-    "#         temp_tup_list = list(data[[cols[i], cols[i+1]]].drop_duplicates().itertuples(index=False, name=None))\n",
-    "#         connections = connections + temp_tup_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "b2759336-7054-4311-b3cc-4e3e0e8d26c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import networkx as nx\n",
-    "\n",
-    "# G = nx.Graph()\n",
-    "# G.add_edges_from(connections)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "08c508cd-27e6-4938-8e8e-7fd25777681b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5388"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#len(list(nx.connected_components(G))) #cantidad de posiciones homogenizables: 3832 \n",
-    "#len([x for x in list(nx.connected_components(G)) if len(x)==6]) #cantidad de grupos con relacion 1:1: 3328\n",
-    "#len([x for x in list(nx.connected_components(G)) if len(x)>6]) #cantidad de grupos con más de 6 componentes: 504\n",
-    "#len(data.HS17.unique()) #cantidad de posiciones distintas en HS17: 5388\n",
-    "#sorted(nx.node_connected_component(G, \"HS17-854233\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "2f49334e-a261-4dbf-82ef-6763a95df217",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8.09159707724426\n",
-      "\n",
-      "6.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# from statistics import mean, median\n",
-    "# print(mean([len(x) for x in list(nx.connected_components(G))]))\n",
-    "# print()\n",
-    "# print(median([len(x) for x in list(nx.connected_components(G))]))"
+    "import networkx as nx"
    ]
   },
   {
