--- a/notebooks/GrafoHSConversions.ipynb
+++ b/notebooks/GrafoHSConversions.ipynb
@@ -2,28 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d89077e9-add9-40c5-84fc-701287281e57",
-   "metadata": {},
-   "source": [
-    "### (Execute if your running in Binder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b64ae3cf-a18b-4142-a3d6-190fb46dbe6b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Uncomment these lines\n",
-    "\n",
-    "# !pip install pandas\n",
-    "# !pip install openpyxl\n",
-    "# !pip install networkx"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "90fab08c-04ae-4b25-b88d-5c291faa740f",
    "metadata": {},
    "source": [
@@ -56,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 55,
    "id": "2f498435-6a3b-4de8-a19d-885d425b06b3",
    "metadata": {},
    "outputs": [],
@@ -88,7 +66,9 @@
     "        \n",
     "    def available_methods(self):\n",
     "        print(\"Use `get_df()` to get dataframe with the correlations between all HS versions\\n\")\n",
-    "        print(\"Use `get_codes()` to get the codes by: version (default HS17, str or list) or chapter\") \n",
+    "        print(\"Use `get_codes()` to get the codes by: version (default HS17, str or list) or chapter\")\n",
+    "        print(\"Use `check_position()` to check if position exists\")\n",
+    "        print(\"Use `year_to_HS()` to get the available HS version from years\")\n",
     "        #uncomplete\n",
     "     \n",
     "    def get_df(self):\n",
@@ -111,7 +91,7 @@
     "            return position in self.__data.values\n",
     "            \n",
     "    \n",
-    "    def return_used_versions(self, start_year=None, end_year=None):\n",
+    "    def year_to_HS(self, start_year=None, end_year=None):\n",
     "        if start_year==None: \n",
     "            start_year = 1992\n",
     "        if end_year==None: \n",
@@ -125,9 +105,21 @@
     "        years_list = years[years.index(start_v):years.index(end_v)+1]\n",
     "        return [version_dict[x] for x in years_list]\n",
     "    \n",
+    "    def HS_to_years(self,hslist):\n",
+    "        y = [1992, 1996, 2002, 2007, 2012, 2017]\n",
+    "        v_dict = {k:v for k,v in zip(self.__HS, y)}\n",
+    "        y_list = [v_dict[x] for x in hslist]\n",
+    "        start = min(y_list)\n",
+    "        end = datetime.now().year if max(y_list)==y[-1] else max(y_list)\n",
+    "        if start==end:\n",
+    "            return f\"from {str(end)} to the present\"\n",
+    "        else: \n",
+    "            return f\"from {str(start)} to {str(end)}\"\n",
+    "        \n",
+    "        \n",
     "    def filter_df(self, positions=None, start_year=None, end_year=None): \n",
     "        \n",
-    "        cols = self.return_used_versions(start_year, end_year)\n",
+    "        cols = self.year_to_HS(start_year, end_year)\n",
     "        df = self.__data[cols]\n",
     "        if positions:\n",
     "            filters = [(df[col].isin(positions)) for col in cols]\n",
@@ -138,7 +130,7 @@
     "            \n",
     "    def find_homogeneous_serie(self, position=None, start_year=None, end_year=None):\n",
     "        if self.check_position(position): \n",
-    "            cols = self.return_used_versions(start_year, end_year)\n",
+    "            cols = self.year_to_HS(start_year, end_year)\n",
     "            data = self.filter_df(start_year, end_year)\n",
     "            versions = [v for v in cols if data[v].str.contains(position).any()]\n",
     "            for col in cols:\n",
@@ -157,7 +149,7 @@
     "    def genSankey(self, position=None, start_year=None, end_year=None, output_title='Sankey Diagram'):\n",
     "        if self.check_position(position): \n",
     "            related = list(set([x[5:] for x in self.find_homogeneous_serie(position, start_year, end_year)]))\n",
-    "            cat_cols = self.return_used_versions(start_year, end_year)\n",
+    "            cat_cols = self.year_to_HS(start_year, end_year)\n",
     "            df = self.filter_df(related, start_year, end_year)\n",
     "            df['count'] = 1\n",
     "            for col in cat_cols: \n",
@@ -226,7 +218,7 @@
     "        else: \n",
     "           print(\"Please define a correct position\") \n",
     "    \n",
-    "    def recursive_trade_off(df, position, k): \n",
+    "    def recursive_trade_off(self, df, position, k): \n",
     "    \n",
     "        if k>=0:\n",
     "            currcols = df.columns.tolist()[k:]\n",
@@ -241,14 +233,14 @@
     "            try:\n",
     "                positions = sorted(nx.node_connected_component(G, currcols[-1]+\"-\"+position))\n",
     "                if len(positions)==len(currcols): \n",
-    "                    return recursive_trade_off(df, position, k-1)\n",
+    "                    return self.recursive_trade_off(df, position, k-1)\n",
     "                else: \n",
     "                    print(\"Evaluation finished\\n\")\n",
-    "                    print(f\"The {','.join(currcols[1:])} versions support your position with no precision loss\")\n",
+    "                    print(f\"Your position has no precision loss {self.HS_to_years(currcols[1:])}\")\n",
     "            except:\n",
     "                print(f\"Position {position} not founded\")\n",
     "        else:\n",
-    "            print(f\"The {','.join(df.columns.tolist())} versions support your position with no precision loss\")\n",
+    "            print(f\"Your position has no precision loss {self.HS_to_years(df.columns)}\")\n",
     "        \n",
     "    def trade_off(self, position=None, start_year=None, end_year=None):\n",
     "        if start_year==None: \n",
@@ -256,10 +248,11 @@
     "        if end_year==None: \n",
     "            end_year = datetime.now().year\n",
     "        if start_year < 1992 or end_year<start_year or end_year>datetime.now().year: \n",
-    "            print(\"Uncorrect years\")\n",
-    "\n",
-    "        if self.ckeck_position(position): \n",
-    "            versions = self.return_used_versions(start_year, end_year)\n",
+    "            return print(\"Uncorrect years\")\n",
+    "        if start_year>=2017:\n",
+    "            return print(\"Both years belong to the latest version\")\n",
+    "        if self.check_position(position): \n",
+    "            versions = self.year_to_HS(start_year, end_year)\n",
     "            print(f\"Period between {start_year} and {end_year} contains the {','.join(versions)} versions\\n\") \n",
     "            print(f\"Loading HS Correlations Tables\\n\")\n",
     "            versions = [v for v in versions if self.__data[v].str.contains(position).any()]\n",
@@ -271,7 +264,7 @@
     "                    data[col] = data[col].apply(lambda x: col+\"-\"+str(int(x)).zfill(6))\n",
     "                k=len(versions)-2\n",
     "                print(f\"Evaluating maximum period with no precision loss for position {position}\\n\")\n",
-    "                return recursive_trade_off(data, position, k)\n",
+    "                return self.recursive_trade_off(data, position, k)\n",
     "            else:\n",
     "                print(f\"Position {position} not founded in that period\")\n",
     "        else:\n",
@@ -280,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 56,
    "id": "186272f4-1b9a-41de-be74-eaa1ffad6728",
    "metadata": {},
    "outputs": [
@@ -319,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 27,
    "id": "8cc5b01a-5280-4e18-a4d4-c60f21c9b53d",
    "metadata": {},
    "outputs": [
@@ -344,275 +337,30 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>HS92</th>\n",
+       "      <th>HS12</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>020110</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>020120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>020130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>020210</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>020220</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>020230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>020311</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>020312</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>020319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>020321</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>020322</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>020329</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>020410</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>020421</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>020422</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>020423</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>020430</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>020441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>020442</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>020443</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>020450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>020500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>020610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>020621</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>020622</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>020629</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>020630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>020641</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>020649</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>020680</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>020690</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>020710</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>020721</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>020739</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>020741</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>020750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>020722</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>020742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>020723</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>020731</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>020743</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135</th>\n",
-       "      <td>020810</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>020820</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>142</th>\n",
-       "      <td>020890</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154</th>\n",
-       "      <td>020900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>021011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157</th>\n",
-       "      <td>021012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>158</th>\n",
-       "      <td>021019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>159</th>\n",
-       "      <td>021020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>160</th>\n",
-       "      <td>021090</td>\n",
+       "      <th>2</th>\n",
+       "      <td>010130</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       HS92\n",
-       "67   020110\n",
-       "68   020120\n",
-       "69   020130\n",
-       "70   020210\n",
-       "71   020220\n",
-       "72   020230\n",
-       "73   020311\n",
-       "74   020312\n",
-       "75   020319\n",
-       "76   020321\n",
-       "77   020322\n",
-       "78   020329\n",
-       "79   020410\n",
-       "80   020421\n",
-       "81   020422\n",
-       "82   020423\n",
-       "83   020430\n",
-       "84   020441\n",
-       "85   020442\n",
-       "86   020443\n",
-       "87   020450\n",
-       "88   020500\n",
-       "89   020610\n",
-       "90   020621\n",
-       "91   020622\n",
-       "92   020629\n",
-       "93   020630\n",
-       "94   020641\n",
-       "95   020649\n",
-       "96   020680\n",
-       "97   020690\n",
-       "98   020710\n",
-       "99   020721\n",
-       "100  020739\n",
-       "101  020741\n",
-       "103  020750\n",
-       "106  020722\n",
-       "108  020742\n",
-       "115  020723\n",
-       "118  020731\n",
-       "123  020743\n",
-       "135  020810\n",
-       "136  020820\n",
-       "142  020890\n",
-       "154  020900\n",
-       "156  021011\n",
-       "157  021012\n",
-       "158  021019\n",
-       "159  021020\n",
-       "160  021090"
+       "     HS12\n",
+       "2  010130"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.get_codes(version=\"HS92\", chapter=\"02\")"
+    "a.get_codes(version=\"HS12\", chapter=\"010130\")"
    ]
   },
   {
@@ -654,7 +402,7 @@
     }
    ],
    "source": [
-    "a.return_used_versions(2006,2022)"
+    "a.year_to_HS(2006,2022)"
    ]
   },
   {
@@ -774,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 59,
    "id": "a37ac887-4787-4d45-a357-9b050752b599",
    "metadata": {},
    "outputs": [
@@ -782,20 +530,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Period between 2018 and 2019 contains the HS17 versions\n",
+      "Period between 2016 and 2019 contains the HS12,HS17 versions\n",
       "\n",
       "Loading HS Correlations Tables\n",
       "\n",
-      "The position 010130 was included in the HS17 versions\n",
+      "The position 010130 was included in the HS12,HS17 versions\n",
       "\n",
       "Evaluating maximum period with no precision loss for position 010130\n",
       "\n",
-      "The HS17 versions support your position with no precision loss\n"
+      "Evaluating graph object with HS12,HS17 versions\n",
+      "\n",
+      "Your position has no precision loss from 2012 to 2022\n"
      ]
     }
    ],
    "source": [
-    "a.trade_off(\"010130\", 2018, 2019) #corregir que devuelva los años posibles"
+    "a.trade_off(\"010130\", 2016, 2019) #corregir que devuelva los años posibles"
    ]
   }
  ],
