--- a/notebooks/GrafoHSConversions.ipynb
+++ b/notebooks/GrafoHSConversions.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "id": "2f498435-6a3b-4de8-a19d-885d425b06b3",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
     "            layout =  dict(\n",
     "                title = output_title,\n",
     "                font = dict(\n",
-    "                  size = 15\n",
+    "                  size = 10\n",
     "                )\n",
     "            )\n",
     "\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "id": "186272f4-1b9a-41de-be74-eaa1ffad6728",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 21,
    "id": "b46611b5-944f-403d-8b88-bc7e6531721c",
    "metadata": {},
    "outputs": [],
@@ -515,9 +515,47 @@
     "import chart_studio.plotly as py\n",
     "import plotly\n",
     "\n",
-    "fig = a.genSankey(\"010130\")\n",
+    "fig = a.genSankey(\"010641\",output_title=\"Sankey Diagram - 0106.41\")\n",
     "if fig is not None:\n",
-    "    plotly.offline.plot(fig, validate=False)"
+    "    plotly.offline.plot(fig, validate=False, filename = \"./img/010641.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "af7cafff-8660-4ccb-b0eb-3d639fbf0abd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show = go.Figure(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "40a8bf15-b52e-4adc-88e7-682baa32ff18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"C:\\\\Users\\\\Usuario\\\\Desktop\\\\CEP\\\\HSConversionTables\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ad24890d-0ba0-4ab6-b5d0-4be6ae3c717c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kaleido.scopes.plotly import PlotlyScope\n",
+    "import plotly.graph_objects as go\n",
+    "scope = PlotlyScope(\n",
+    "    plotlyjs=\"https://cdn.plot.ly/plotly-latest.min.js\",\n",
+    "    # plotlyjs=\"/path/to/local/plotly.js\",\n",
+    ")\n",
+    "\n",
+    "with open(\"./img/SankeyDiagram - 010641.png\", \"wb\") as f:\n",
+    "    f.write(scope.transform(show, format=\"png\"))"
    ]
   },
   {
