--- a/notebooks/GrafoHSConversions.ipynb
+++ b/notebooks/GrafoHSConversions.ipynb
@@ -9,20 +9,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "256d55eb-f944-4bff-931f-28ee2f4fb723",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import os\n",
-    "from pathlib import Path\n",
-    "import platform\n",
-    "import networkx as nx"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "206108c1-fa38-4e4a-9f5a-3775125a379d",
    "metadata": {
@@ -34,11 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "2f498435-6a3b-4de8-a19d-885d425b06b3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "import platform\n",
     "import pandas as pd\n",
     "import functools\n",
     "from datetime import datetime\n",
@@ -273,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "186272f4-1b9a-41de-be74-eaa1ffad6728",
    "metadata": {},
    "outputs": [
@@ -506,18 +495,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "b46611b5-944f-403d-8b88-bc7e6531721c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6260/4207294674.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mchart_studio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplotly\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'C:\\\\Users\\\\Usuario\\\\Desktop\\\\CEP\\\\HSConversionTables'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgenSankey\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"010130\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0moutput_title\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Sankey Diagram - 0101.30\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import plotly.graph_objects as go\n",
     "import chart_studio.plotly as py\n",
     "import plotly\n",
+    "os.chdir('C:\\\\Users\\\\Usuario\\\\Desktop\\\\CEP\\\\HSConversionTables')\n",
     "\n",
-    "fig = a.genSankey(\"010641\",output_title=\"Sankey Diagram - 0106.41\")\n",
+    "fig = a.genSankey(\"010130\",output_title=\"Sankey Diagram - 0101.30\")\n",
     "if fig is not None:\n",
-    "    plotly.offline.plot(fig, validate=False, filename = \"./img/010641.html\")"
+    "    plotly.offline.plot(fig, validate=False, filename = \"./img/010130.html\")"
    ]
   },
   {
@@ -555,7 +557,7 @@
     ")\n",
     "\n",
     "with open(\"./img/SankeyDiagram - 010641.png\", \"wb\") as f:\n",
-    "    f.write(scope.transform(show, format=\"png\"))"
+    "    f.write(scope.transform(show, format=\"svg\")) "
    ]
   },
   {
