--- a/notebooks/GrafoHSCorrelationTables.ipynb
+++ b/notebooks/GrafoHSCorrelationTables.ipynb
@@ -24,16 +24,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4a5acd2b-996b-44d0-bf39-e93f5c1ff92d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from HSCorrelations import * #Todo el progrma se encuentra en HSCorrelations.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "186272f4-1b9a-41de-be74-eaa1ffad6728",
    "metadata": {
     "tags": []
@@ -50,8 +40,9 @@
     }
    ],
    "source": [
+    "from HSCorrelations import * #Todo el progrma se encuentra en HSCorrelations.py\n",
     "fullpath = 'C:\\\\Users\\\\Usuario\\\\Desktop\\\\CEP\\\\HSConversionTables\\\\data\\\\CompleteCorrelationsOfHS-SITC-BEC_20170606.xlsx'\n",
-    "a = HSCorrelations(path = fullpath)"
+    "tables = HSCorrelations(path = fullpath)"
    ]
   },
   {
@@ -271,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "b9731e75-2ddf-4f2b-9443-b79fc95a1cc4",
    "metadata": {},
    "outputs": [
@@ -287,7 +278,7 @@
        " 'HS17-010690']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "b46611b5-944f-403d-8b88-bc7e6531721c",
    "metadata": {},
    "outputs": [],
@@ -315,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "8d7c5371-3317-4b63-8f58-707951a1c1a6",
    "metadata": {},
    "outputs": [
@@ -323,7 +314,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Period between 1995 and 2019 contains the HS92,HS96,HS02,HS07,HS12,HS17 versions\n",
+      "Period between 1992 and 2020 contains the HS92,HS96,HS02,HS07,HS12,HS17 versions\n",
       "\n",
       "Loading HS Correlations Tables\n",
       "\n",
@@ -338,12 +329,40 @@
     }
    ],
    "source": [
-    "a.trade_off(\"010641\", 1995, 2019)"
+    "a.trade_off(\"010641\", 1992, 2020)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
+   "id": "90d090e8-b1a8-4266-8e95-06da188138ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Period between 2012 and 2020 contains the HS12,HS17 versions\n",
+      "\n",
+      "Loading HS Correlations Tables\n",
+      "\n",
+      "The position 010641 was included in the HS12,HS17 versions\n",
+      "\n",
+      "Evaluating maximum period with no precision loss for position 010641\n",
+      "\n",
+      "Evaluating graph object with HS12,HS17 versions\n",
+      "\n",
+      "Your position has no precision loss from 2012 to 2022\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.trade_off(\"010641\", 2012, 2020)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "a37ac887-4787-4d45-a357-9b050752b599",
    "metadata": {},
    "outputs": [
